--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,10 @@
 .externalNativeBuild
 .cxx
 local.properties
+/screenshots/chat.png
+/screenshots/comments.jpg
+/screenshots/feed.jpg
+/screenshots/friends.png
+/screenshots/home.jpg
+/screenshots/profile.jpg
+/screenshots/splash.jpg
